query selectors added to javascript file

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     <div class="container">
       <div class="timer">
         <h2>
-          <span>Timer</span>
-          <span>25</span>
-          <span>:</span>
-          <span>00</span>
+          <span class="timer-status">Timer</span>
+          <span class="timer-minutes">25</span>
+          <span class="timer-semicolon">:</span>
+          <span class="timer-seconds">00</span>
         </h2>
       </div>
       <div class="timer-controls">
-        <h2>Start</h2>
-        <h2>Stop</h2>
-        <h2>Break</h2>
+        <h2 class="timer-mode-start">Start</h2>
+        <h2 class="timer-mode-pause">Pause</h2>
+        <h2 class="timer-mode-reset">Reset</h2>
+        <h2 class="timer-mode-break">Break</h2>
       </div>
     </div>
   </body>
