Add button styling

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     </h1>
     <div class="container">
       <div class="timer">
-        <h2>
-          <span class="timer-status">Timer</span>
-          <span class="timer-minutes">4</span>
+        <h1>
+          <span class="timer-minutes">25</span>
           <span class="timer-semicolon">:</span>
           <span class="timer-seconds">00</span>
-        </h2>
+        </h1>
       </div>
+      <h2></h2>
       <div class="timer-controls">
-        <h2 class="timer-mode-start">Start</h2>
-        <h2 class="timer-mode-pause">Pause</h2>
-        <h2 class="timer-mode-reset">Reset</h2>
-        <h2 class="timer-mode-break">Break</h2>
+        <button class="timer-mode-start">Start</button>
+        <button class="timer-mode-pause">Pause</button>
+        <button class="timer-mode-reset">Reset</button>
+        <button class="timer-mode-break">Break</button>
       </div>
     </div>
   </body>
