--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <span class="timer-seconds">00</span>
         </h1>
       </div>
-      <h2></h2>
+      <div class="quote hide">
+        <h3>If a tree falls does anybody hear it? </h3>
+      </div>
       <div class="timer-controls">
         <button class="timer-mode-start">Start</button>
         <button class="timer-mode-pause">Pause</button>
@@ -28,6 +30,8 @@
         <button class="timer-mode-break">Break</button>
       </div>
     </div>
+    <audio src=""></audio>
+    <footer></footer>
   </body>
   <script src="script.js" defer></script>
 </html>
