--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </h1>
       </div>
       <div class="quote hide">
-        <h3>If a tree falls does anybody hear it? </h3>
+        <h3>If a tree falls and no one is around, does anybody hear it? </h3>
       </div>
       <div class="timer-controls">
         <button class="timer-mode-start">Start</button>
