add quotes to quote object

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </h1>
       </div>
       <div class="quote hide">
-        <h3>If a tree falls and no one is around, does anybody hear it? </h3>
+        <h3>If a tree falls and no one is around, did it make a sound? </h3>
       </div>
       <div class="timer-controls">
         <button class="timer-mode-start">Start</button>
@@ -30,8 +30,11 @@
         <button class="timer-mode-break">Break</button>
       </div>
     </div>
-    <audio src=""></audio>
+    <audio src="/audio/completion.wav"></audio>
+    <audio src="/audio/woodpecker.wav"></audio>
     <footer></footer>
   </body>
-  <script src="script.js" defer></script>
+  <script src="/script/main.js" defer></script>
+  <script src="/script/quotes.js" defer></script>
+
 </html>
