--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </h1>
       </div>
       <div class="quote hide">
-        <h3>If a tree falls and no one is around, did it make a sound? </h3>
+        <p class="quote-text"></p>
       </div>
       <div class="timer-controls">
         <button class="timer-mode-start">Start</button>
