--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="/pomodoro-timer/appleFavicon.ico" type="image/x-icon" /> 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+     
     <title>Apple Timer</title>
   </head>
   <body>
@@ -32,7 +34,9 @@
     </div>
     <audio src="/audio/completion.wav"></audio>
     <audio src="/audio/woodpecker.wav"></audio>
-    <footer></footer>
+    <footer>
+      <p>Lawrence-gg 2022</p>
+    </footer>
   </body>
   <script src="/script/main.js" defer></script>
   <script src="/script/quotes.js" defer></script>
