Moved out of script sub-folder to publish

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p>Lawrence-gg 2022</p>
     </footer>
   </body>
-  <script src="/script/main.js" defer></script>
-  <script src="/script/quotes.js" defer></script>
+  <script src="main.js" defer></script>
+  <script src="quotes.js" defer></script>
 
 </html>
